newsreader-pod.yaml
apiVersion: v1
kind: Pod 
metadata:
  name:
    newsreader-pod
  labels:
    app: newsreader
spec:
  containers:
  - name: newsreader
    image: docker.io/rlkamradt/newsreader:latest
    ports:
    - containerPort: 8080
