readnews.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: readnews-deployment
  labels:
    app: readnews
spec:
  selector:
    matchLabels:
      app: readnews
  template:
    metadata:
      labels:
        app: readnews
    spec:
      containers:
      - name: readnews
        image: docker.io/rlkamradt/readnews:latest
        ports:
        - containerPort: 8080
        livenessProbe:
          httpGet:
            path: /actuator/health
            port: 8080
          timeoutSeconds: 10
          periodSeconds: 10   
          initialDelaySeconds: 20
---
apiVersion: v1
kind: Service
metadata:
  name: readnews-service
spec:
  type: LoadBalancer
  selector:
    app: readnews
  ports:
  - port: 8080
    targetPort: 8080
