readnewsblock.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: readnewsblock-deployment
  labels:
    app: readnewsblock
spec:
  selector:
    matchLabels:
      app: readnewsblock
  template:
    metadata:
      labels:
        app: readnewsblock
    spec:
      containers:
      - name: readnewsblock
        image: docker.io/rlkamradt/readnewsblock:latest
        ports:
        - containerPort: 8080
        livenessProbe:
          httpGet:
            path: /actuator/health
            port: 8080
          timeoutSeconds: 10
          periodSeconds: 10
          initialDelaySeconds: 20
---
apiVersion: v1
kind: Service
metadata:
  name: readnewsblock-service
spec:
  type: ClusterIP
  selector:
    app: readnewsblock
  ports:
  - port: 8080
    targetPort: 8080
