readnewsgo.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: readnewsgo-deployment
  labels:
    app: readnewsgo
spec:
  selector:
    matchLabels:
      app: readnewsgo
  template:
    metadata:
      labels:
        app: readnewsgo
    spec:
      containers:
      - name: readnewsgo
        image: docker.io/rlkamradt/go-go-go:latest
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: readnewsgo-service
spec:
  type: ClusterIP
  selector:
    app: readnewsgo
  ports:
  - port: 8080
    targetPort: 8080
