vhost-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: readnews-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: readnews.local 
    http:
      paths:
      - backend:
          serviceName: readnews-service
          servicePort: 8080
        path: /
